--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="notepadApp" ng-clock>
   <head>
-    <title><%= title %></title>
+    <title>Hello</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='stylesheet' href="/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel='stylesheet' href="/bootstrap/dist/css/bootstrap-theme.min.css" />
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="/jquery/dist/jquery.min.js"></script>
+    <script src="/angular/angular.min.js" ></script>
+    <script src="/angular-route/angular-route.min.js"></script>
+    <script src="/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/javascripts/routerApp.js"></script>
+    <script src="/javascripts/indexController.js"></script>
   </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+  <body id="indexController">
+    <div ui-view="content" class="container">
+
+    </div>
+
+
   </body>
 </html>
